tests/errors/sleep_expects_int.b
// @error sleep expects int argument
fn test() {
    sleep("100");
}
